# wandb_server_ex

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
elixir/: .gitignore  mix.exs
elixir/example/: simple_loop.exs
elixir/examples/: mnist.exs
elixir/lib/: wandb_server_ex.ex
server/: .env_  Dockerfile  pyproject.toml  requirements.txt
server/sh/: build.sh  entrypoint.sh  proxy.sh  push.sh  reqs.sh  start.sh
server/src/: main.py  sample.py
sh/: docker.sh  entrypoint.sh  start.sh
src/: main.py
wandb_server_ex/: .iex.exs  README.md  flows_wandb
wandb_server_ex/examples/: mnist.exs
wandb_server_ex/lib/: wandb_server_ex.ex
wandb_server_ex/test/: wandb_server_ex_test.exs
