[tool.poetry]
name = "wandb-server"
version = "0.1.0"
description = ""
authors = ["Marko Vukovic <mvkvc.git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
wandb = "^0.14.2"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
