[tool.poetry]
name = "wandb-server"
version = "0.1.0"
description = ""
authors = ["Marko Vukovic <mvkvc.git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
wandb = "^0.15.0"
uvicorn = "^0.21.1"
fastapi = "^0.95.1"
python-dotenv = "^1.0.0"
requests = "^2.29.0"
certifi = "^2022.12.7"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
